--- a/src/NoiseEvent.css
+++ b/src/NoiseEvent.css
@@ -1,6 +1,4 @@
 .noise-event-container {
     padding: 1rem;
-    border-bottom: 1px solid grey;
-    background-color: white;
-    font-size: 1.25rem;
+    border-bottom: 1px solid #AAB8C2;
 }
