--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,30 @@
 html, body {
   height: 100%;
-  font-family: 'arial', sans-serif;
+  font-family: 'verdana', sans-serif;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(36,52,71);
+  color: white;
 }
 
 header {
   /* grid-area: header; */
-  font-size: 2rem;
+  font-size: 0.75rem;
   display: flex;
   justify-content: center;
-  position: absolute;
-  top: 0;
-  height: 55px;
-  width: 100%;
+  align-items: center;
+  height: 64px;
   box-shadow: 0px 0px 6px 0 #000;
+  position: sticky;
+  background-color: rgb(20,29,38);
   /* background-color: #9FEDD7; */
 }
 
 .body {
-  position: absolute;
-  top: 60px;
-  bottom: 5rem;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+  display: block;
+  overflow-y: scroll;
+  max-height: 576px;
 }
 
 footer {
