--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: 100vh;
   font-family: 'verdana', sans-serif;
   overflow: hidden;
   display: flex;
@@ -14,7 +14,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 64px;
+  height: 12vh;
   box-shadow: 0px 0px 6px 0 #000;
   position: sticky;
   background-color: rgb(20,29,38);
@@ -24,17 +24,26 @@ header {
 .body {
   display: block;
   overflow-y: scroll;
-  max-height: 576px;
+  max-height: 80vh;
 }
 
 footer {
   /* grid-area: footer; */
   display: flex;
   justify-content: center;
-  position: absolute;
-  bottom: 0;
-  height: 5rem;
-  width: 100%;
+  height: 128px;
   box-shadow: inset 0px 0px 6px 0 #000;
+  background-color: rgb(20,29,38);
+  font-size: 0.75rem;
   /* border-top: 1px solid grey; */
+}
+
+.Collapsible {
+  background-color: rgb(63, 72, 83);
+  font-size: 0.75rem;
+}
+
+.Collapsible__contentInner {
+  padding-left: 2rem;
+  border-top: 1px solid rgb(20,29,38);
 }
